--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,3 +29,30 @@ services:
       - anything-llm
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    depends_on:
+      - collector
+
+  collector:
+    container_name: anythingllm_collector
+    build:
+      context: ../.
+      dockerfile: ./docker/Dockerfile
+      args:
+        ARG_UID: ${UID:-1000}
+        ARG_GID: ${GID:-1000}
+    cap_add:
+      - SYS_ADMIN
+    command: ["node", "/app/collector/index.js"]
+    volumes:
+      - "./.env:/app/server/.env"
+      - "../collector/hotdir/:/app/collector/hotdir"
+      - "../collector/outputs/:/app/collector/outputs"
+    user: "${UID:-1000}:${GID:-1000}"
+    ports:
+      - "3005:3005"
+    env_file:
+      - .env
+    networks:
+      - anything-llm
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
